--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <head> 
     <meta charset="UTF-8" />
     <title> Hi :) </title>
+    <link rel="stylesheet" href="style.css">
   </head>
 </html>
