--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <title> Hi :) </title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <body>
+    <p style="color: green;"> Green text idk uhhh </p>
+  </body>
 </html>
