--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <p style="color: green;"> Green text idk uhhh </p>
+    <script src="script.js"></script>
   </body>
 </html>
