--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p style="color: green;"> Green text idk uhhh </p>
+    <p style="color: green;"> Hello, adventurer!! </p>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
     <script src="script.js"></script>
   </body>
