--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p style="color: green;"> Hello, adventurer!! </p>
+    <p style="color: #C8FFD9;"> Hello, adventurer!! </p>
     <script src="script.js"></script>
   </body>
 </html>
