--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Hi :) </title>
   </head>
   <body>
-    <p style="color: #C8FFD9;"> Hello, adventurer!! </p>
+    <p style=""> Hello, adventurer!! </p>
     <script src="script.js"></script>
   </body>
 </html>
