--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Hi :) </title>
   </head>
   <body>
-    <p class="runes"> Hello, adventurer!! </p>
+    <p class="runes center down"> Hello, adventurer!! </p>
     <script src="script.js"></script>
   </body>
 </html>
