--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 class="runes center down"> Hello, alchemist </h1>
+    <button class="runes center"> Ready? </button>
     <script src="script.js"></script>
   </body>
 </html>
