--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title> Hi :) </title>
   </head>
   <body>
-    <h1 class="runes center down"> Hello, alchemist </h1>
+    <div class = "down"> 
+      <h1 class="runes center"> Hello, alchemist </h1>
+    </div>  
     <p> </p>
     <button class="runes center"> Ready? </button>
     <script src="script.js"></script>
