--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title> Hi :) </title>
   </head>
   <body>
-    <div class = "down center"> 
-      <h1 class="runes"> Hello, alchemist </h1>
+    <div class = "runes down center"> 
+      <h1 class="introtext"> Hello, alchemist </h1>
       <p> </p>
-      <button class="runes readybutton"> Ready? </button>
+      <button class="readybutton"> Ready? </button>
     </div>  
     <script src="script.js"></script>
   </body>
