--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,11 @@
-
+<! DOCTYPE html> 
+<html> 
+  <head> 
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css?v=3">
+    <title> Hi :) </title>
+  </head>
+  <body>
+    <script src="script.js"></script>
+  </body>
+</html>
