--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <div class = "runes down center"> 
       <h1 class="introtext"> Hello, alchemist </h1>
-      <button class="readybutton"> Ready? </button>
+      <a href= "page2.html">
+        <button class="readybutton"> Ready? </button>
+      </a>
     </div>  
     <script src="script.js"></script>
   </body>
