--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css?v=3">
-    <title> Hi :) </title>
+    <title> Welcome </title>
   </head>
   <body>
     <div class = "runes down center"> 
