--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,12 @@
     <title> Hi :) </title>
   </head>
   <body>
+    <div class="dialoguewrap"> 
+      <img src = "assets/characters/grandWizard.png" class = "portrait">
+      <div class ="dialoguebox">
+        <p class = "dialoguetext"> Welcome, alchemist. </p>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
