--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,12 @@
     <div class="dialoguewrap"> 
       <img src = "assets/characters/grandWizard.png" class = "portrait">
       <div class ="dialoguebox">
-        <p class = "dialoguetext"> Welcome, alchemist. </p>
+        <p class = "dialoguetext"> Welcome.</p>
+        <div id="namestep" style="display: none;">
+          <input id ="name" placeholder = "Y/N">
+          <button id="submitname"> Confirm. </button>
+        </div>
+        <button id = "nextbutton"> NEXT </button>
       </div>
     </div>
     <script src="script.js"></script>
