--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
           <input id ="name" placeholder = "Y/N">
           <button id="submitname"> Confirm. </button>
         </div>
-        <button id = "nextbutton"> NEXT </button>
+        <button class = "nextbutton"> NEXT </button>
       </div>
     </div>
     <script src="script.js"></script>
