--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
     <div class="dialoguewrap"> 
       <img src = "assets/characters/grandWizard.png" class = "portrait">
       <div class ="dialoguebox">
-        <p id = "dialoguetext"> Welcome.</p>
+        <p id = "dialoguetext"></p>
         <div id="namestep" style="display: none;">
           <input id ="name" placeholder = "Y/N">
           <button id="submitname"> Confirm. </button>
